# neko_rexec

./: MANIFEST.in  README.md  pyproject.toml
neko_rexec/: __init__.py  send_remote_cmd.py
rexec/: __main__.py
